[tool.poetry]
name = "museum-map"
version = "0.4.0"
description = ""
authors = ["Mark Hall <mark.hall@work.room3b.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
click = "^8.0.0"
inflection = "^0.5.1"
requests = "^2.27.1"
sqlalchemy = "^1.4.36"
sqlalchemy_json = "^0.4.0"
lxml = "^4.8.0"
spacy = "^3.2.4"
gensim = "^4.1.2"
scipy = "^1.8.0"
psycopg2 = "^2.9.3"
tornado = "^6.1"
asyncpg = "^0.25.0"
SQLAlchemy = "^1.4.36"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0-py3-none-any.whl"}
PyYAML = "^6.0"
Cerberus = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
