[metadata]
name = museum_map
version = attr: src.museum_map.VERSION
summary = Code for generating the thematic museum map
author = Mark Hall
author-email = mark.hall@work.room3b.eu
license = MIT
description = file: README.rst, CHANGES.rst
classifier =
    Programming Language :: Python
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
zip_safe = False
packages = find:
package_dir =
    = src
include_package_data = True

[options.entry_points]
console_scripts =
    MuseumMap = museum_map.scripts.main:cli
paste.app_factory =
    main = museum_map:main

[flake8]
max-line-length = 100
include = src
